sql/table.h
@@ -2863,8 +2863,7 @@ struct TABLE_LIST
     DBUG_PRINT("enter", ("Alias: '%s'  Unit: %p",
                         (alias.str ? alias.str : "<NULL>"),
                          get_unit()));
-    derived_type= ((derived_type & DTYPE_MASK) |
-                   DTYPE_TABLE | DTYPE_MERGE);
+    derived_type= (derived_type & DTYPE_MASK) | DTYPE_MERGE;
     set_check_merged();
     DBUG_VOID_RETURN;
   }
@@ -2878,9 +2877,7 @@ struct TABLE_LIST
     DBUG_PRINT("enter", ("Alias: '%s'  Unit: %p",
                         (alias.str ? alias.str : "<NULL>"),
                          get_unit()));
-    derived= get_unit();
-    derived_type= ((derived_type & (derived ? DTYPE_MASK : DTYPE_VIEW)) |
-                   DTYPE_TABLE | DTYPE_MATERIALIZE);
+    derived_type= (derived_type & DTYPE_MASK) | DTYPE_MATERIALIZE;
     set_check_materialized();
     DBUG_VOID_RETURN;
   }
